--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SportsConnect</string>
+    <string name="web_client_id">497872850980-ptlaejqd5mbnp0rq8n9euiko760fks44.apps.googleusercontent.com</string>
 </resources>
