--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,20 @@
     <string name="web_client_id">497872850980-ptlaejqd5mbnp0rq8n9euiko760fks44.apps.googleusercontent.com</string>
     <string name="email">Sähköposti</string>
     <string name="password">Salasana</string>
+    <string name="confirm_password">Vahvista salasana</string>
     <string name="log_in">Kirjaudu sisään</string>
     <string name="player_sign_up">Luo uusi tili pelaajana</string>
     <string name="club_sign_up">Luo uusi tili joukkueelle</string>
+    <string name="first_name">Etunimi</string>
+    <string name="last_name">Sukunimi</string>
+    <string name="bio">Lyhyt kuvaus itsestäsi</string>
+    <string name="career">Kerro aikaisemmasta pelikokemuksestasi</string>
+    <string name="city">Paikkakunta, jossa haluat pelata</string>
+    <string name="current_team">Mahdollinen tämänhetkinen joukkueesi</string>
+    <string name="phone_number">Puhelinnumero</string>
+    <string name="position">Pelipaikka</string>
+    <string name="level">Sarjataso, jossa haluat pelata</string>
+    <string name="strengths">Vahvuudet pelaajana</string>
+    <string name="searching_for_team">Etsin joukkuetta</string>
+    <string name="ready">Valmis</string>
 </resources>
